Closed
Bug 611276
Opened 15 years ago
Closed 15 years ago
JSOP_CALLEE pushes null, not undefined, for this
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla2.0b8
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | betaN+ |
People
(Reporter: Waldo, Assigned: Waldo)
References
(
URL
)
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
2.55 KB,
patch
|
jimb
:
review+
|
Details | Diff | Splinter Review |
js> (function test(recurring)
{
"use strict";
if (recurring)
assertEq(this, undefined);
else
test(true);
})(false)
typein:14: Error: Assertion failed: got null, expected (void 0)
One-line bug, one-line fix -- I'll get it and a test in the morning.
| Assignee | ||
Comment 1•15 years ago
|
||
Attachment #489921 -
Flags: review?(jimb)
Updated•15 years ago
|
Attachment #489921 -
Flags: review?(jimb) → review+
| Assignee | ||
Comment 2•15 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Target Milestone: --- → mozilla2.0b8
Comment 3•15 years ago
|
||
Status: ASSIGNED → RESOLVED
blocking2.0: --- → betaN+
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•