Bug 611276 - JSOP_CALLEE should push undefined, not null, for this.  r=jimb